--- a/Online_razmjena/Views/Role/Index.cshtml
+++ b/Online_razmjena/Views/Role/Index.cshtml
@@ -4,7 +4,14 @@
 }
 
 <h1>List of Roles</h1>
-<a asp-action="Create">Create</a>
+<p>
+    @using (Html.BeginForm("Index", "Role", FormMethod.Get))
+    {
+        @Html.TextBox("search")<input style="margin-left:4px;" type="submit" value="Pretraži" />
+    }
+</p>
+<a asp-action="Create" class="btn btn-sm btn-primary">Nova</a>
+
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
@@ -15,19 +22,25 @@
     <tbody>
         @foreach (var role in Model)
         {
-        <tr>
-            <td>@role.Id</td>
-            <td>@role.Name</td>
-            <td i-role="@role.Id"></td>
-            <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
-            <td>
-                <form asp-action="Delete" asp-route-id="@role.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
-                    </button>
-                </form>
-        </tr>
+            <tr>
+                <td>@role.Id</td>
+                <td>@role.Name</td>
+                @*<td i-role="@role.Id"></td>*@
+                <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
+                <td>
+                    <form asp-action="Delete" asp-route-id="@role.Id" method="post">
+                        <button type="submit" class="btn btn-sm btn-danger">
+                            Delete
+                        </button>
+                    </form>
+                    </td>
+            </tr>
 
         }
     </tbody>
 </table>
+@*<nav aria-label="Role Paging">
+    <div class="text-center">
+        @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
+    </div>
+</nav>*@
