--- a/Online_razmjena/Views/Role/Index.cshtml
+++ b/Online_razmjena/Views/Role/Index.cshtml
@@ -26,11 +26,11 @@
                 <td>@role.Id</td>
                 <td>@role.Name</td>
                 @*<td i-role="@role.Id"></td>*@
-                <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
+                <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Dodaj</a></td>
                 <td>
                     <form asp-action="Delete" asp-route-id="@role.Id" method="post">
                         <button type="submit" class="btn btn-sm btn-danger">
-                            Delete
+                            Izbriši
                         </button>
                     </form>
                     </td>
