--- a/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
@@ -7,7 +7,7 @@
         <p class="card-text">@(string.IsNullOrEmpty(Model.Opis) ? "Nema Opisa": Model.Opis)</p>
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
-                <a asp-route="bookDetailsRoute" asp-route-id="@Model.Id"
+                <a asp-route="Details" asp-route-id="@Model.Id"
                    class="btn btn-sm btn-outline-secondary">Detalji</a>
             </div>
             <small class="text-muted">@(string.IsNullOrEmpty(Model.Kontakt) ? "NA" : Model.Kontakt)</small>
