--- a/Online_razmjena/Views/_ViewImports.cshtml
+++ b/Online_razmjena/Views/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @using Online_razmjena.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
