--- a/Online_razmjena/Views/Slicice/Create.cshtml
+++ b/Online_razmjena/Views/Slicice/Create.cshtml
@@ -20,6 +20,10 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
+        <input asp-for="Korisnik" class="form-control" value="@User.Identity.Name"/>
+        <span asp-validation-for="Korisnik" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label asp-for="Naziv" class="control-label"></label>
         <input asp-for="Naziv" class="form-control" />
         <span asp-validation-for="Naziv" class="text-danger"></span>
