--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -41,10 +41,16 @@
                     <h1>@Model.Naziv</h1>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md-12 text-primary">
                     <span class="label label-primary">By: </span>
+                    <span class="monospaced">@Model.Korisnik</span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 text-primary">
+                    <span class="label label-primary">Kontakt: </span>
                     <span class="monospaced">@Model.Kontakt</span>
                 </div>
             </div>
@@ -57,18 +63,10 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <a class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal">
-                        Read now
-                    </a>
-                </div>
-            </div>
-
             <hr />
 
             <ul class="list-group">
-                <li class="list-group-item"><span class="font-weight-bold">Total pages - </span> @Model.BrojSlicica</li>
+                <li class="list-group-item"><span class="font-weight-bold">Brojevi sličica</span> @Model.BrojSlicica</li>
             </ul>
         </div>
     </div>
