--- a/Online_razmjena/Views/Slicice/MySlicice.cshtml
+++ b/Online_razmjena/Views/Slicice/MySlicice.cshtml
@@ -12,7 +12,7 @@
             if (slicica.Korisnik == @User.Identity.Name)
             {
                 <div class="col-md-4">
-                    <partial name="_sliciceThumbnail" model="@slicica" />
+                    <partial name="_sliciceThumbnailDelete" model="@slicica" />
                 </div>
             }
         }
