--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -57,8 +57,15 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <p class="description">
+                    <p class="description"> Opis:
                         @Model.Opis
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="description">Dodatne Informacije:
+                        @Model.DodatneInformacije
                     </p>
                 </div>
             </div>
