--- a/Online_razmjena/Views/Shared/_LoginPartial.cshtml
+++ b/Online_razmjena/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Slicice" asp-action="Create">Dodaj Sličicu</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Edit">Dodaj Post</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Slicice" asp-action="MySlicice">Moje Sličice</a>
         </li>
     }
