--- a/Online_razmjena/Views/_ViewImports.cshtml
+++ b/Online_razmjena/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Online_razmjena
 @using Online_razmjena.Models
+@using Online_razmjena.Models.Comments
 @using Online_razmjena.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity
