--- a/Online_razmjena/Views/Shared/_postThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_postThumbnail.cshtml
@@ -15,6 +15,13 @@
                 <a asp-controller="Home" asp-action="Post" asp-route-id="@Model.Id"
                    class="btn btn-sm btn-outline-secondary">Detalji</a>
             </div>
+            @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdmin")).Succeeded)
+            {
+        <div class="btn-group">
+            <a asp-controller="Home" asp-action="Remove" asp-route-id="@Model.Id"
+               class="btn btn-sm btn-outline-danger">Izbriši</a>
+        </div>
+            }
             <small class="text-muted">@(string.IsNullOrEmpty(Model.Tip) ? "NA" : Model.Tip)</small>
         </div>
     </div>
