--- a/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
@@ -10,7 +10,15 @@
                 <a asp-route="Details" asp-route-id="@Model.Id"
                    class="btn btn-sm btn-outline-secondary">Detalji</a>
             </div>
-            <small class="text-muted">@(string.IsNullOrEmpty(Model.Kontakt) ? "NA" : Model.Kontakt)</small>
-        </div>
+            @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdmin")).Succeeded)
+            {
+                <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+                    <button type="submit" class="btn btn-sm btn-danger">
+                        Izbriši
+                    </button>
+                </form>
+            }
+                <small class="text-muted">@(string.IsNullOrEmpty(Model.Kontakt) ? "NA" : Model.Kontakt)</small>
+            </div>
     </div>
 </div>
