--- a/Online_razmjena/Views/Home/Post.cshtml
+++ b/Online_razmjena/Views/Home/Post.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="container">
-    <h3 class="display-4">Book details</h3>
+    <h3 class="display-4">Objava</h3>
     <div class="row">
         <div class="col-md-6">
             <div class="row">
