--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="container">
-    <h3 class="display-4">Book details</h3>
+    <h3 class="display-4">Sličica</h3>
     <div class="row">
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
