--- a/Online_razmjena/Views/Home/Index.cshtml
+++ b/Online_razmjena/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Post";
+    ViewData["Title"] = "Objave";
 }
 @model IEnumerable<Post>
 
@@ -10,7 +10,7 @@
     }
 </p>*@
 <div class="container">
-    <h3 class="display-4">Post</h3>
+    <h3 class="display-4">Objave</h3>
     <div class="row">
 
         @foreach (var post in Model)
