added albumi i nacin

--- a/Online_razmjena/Views/Shared/_Layout.cshtml
+++ b/Online_razmjena/Views/Shared/_Layout.cshtml
@@ -32,8 +32,14 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Album" asp-action="Index">Albumi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Zamjena" asp-action="Index">Zamjene</a>
+                            </li>
                         }
-                        </ul>
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
