add zamjena i albumi to details

--- a/Online_razmjena/Views/Zamjena/Create.cshtml
+++ b/Online_razmjena/Views/Zamjena/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Način" class="control-label"></label>
-                <input asp-for="Način" class="form-control" />
-                <span asp-validation-for="Način" class="text-danger"></span>
+                <label asp-for="Nacin" class="control-label"></label>
+                <input asp-for="Nacin" class="form-control" />
+                <span asp-validation-for="Nacin" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
