--- a/Online_razmjena/Views/Zamjena/Edit.cshtml
+++ b/Online_razmjena/Views/Zamjena/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Online_razmjena.Models.ZamjenaModel
+﻿@model Zamjena
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ZamjenaId" />
             <div class="form-group">
-                <label asp-for="Način" class="control-label"></label>
-                <input asp-for="Način" class="form-control" />
-                <span asp-validation-for="Način" class="text-danger"></span>
+                <label asp-for="Nacin" class="control-label"></label>
+                <input asp-for="Nacin" class="form-control" />
+                <span asp-validation-for="Nacin" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
