--- a/Online_razmjena/Views/Slicice/Create.cshtml
+++ b/Online_razmjena/Views/Slicice/Create.cshtml
@@ -30,11 +30,11 @@
     </div>
     <div class="form-group">
         <label asp-for="AlbumId" class="control-label"></label>
-        <select asp-for="AlbumId" class="form-control" id="select2" asp-items="ViewBag.AlbumId"></select>
+        <select asp-for="AlbumId" class="form-control" id="select2" asp-items="ViewBag.Albumi"></select>
     </div>
     <div class="form-group">
         <label asp-for="ZamjenaId" class="control-label"></label>
-        <select asp-for="ZamjenaId" class="form-control" asp-items="ViewBag.ZamjenaId"></select>
+        <select asp-for="ZamjenaId" class="form-control" asp-items="ViewBag.Zamjene"></select>
     </div>
 
     <div class="form-group">
