--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-md-12 text-primary">
                     <span class="label label-primary">Album i godina: </span>
-                    <span class="monospaced">@Html.DisplayFor(model => model.AlbumModel.Naziv)  (@Model.GodinaIzdanja)</span>
+                    <span class="monospaced">@Model.Album  (@Model.GodinaIzdanja)</span>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
 
             <hr />
             <ul class="list-group">
-                <li class="list-group-item"><span class="font-weight-bold">Način Zamjene</span> @Html.DisplayFor(model => model.ZamjenaModel.ZamjenaId)</li>
+                <li class="list-group-item"><span class="font-weight-bold">Način Zamjene</span> @Model.Zamjena</li>
             </ul>
             <ul class="list-group">
                 <li class="list-group-item"><span class="font-weight-bold">Brojevi sličica</span> @Model.BrojSlicica</li>
