--- a/Online_razmjena/Views/Zamjena/Details.cshtml
+++ b/Online_razmjena/Views/Zamjena/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Online_razmjena.Models.ZamjenaModel
+﻿@model Zamjena
 
 @{
     ViewData["Title"] = "Details";
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Način)
+            @Html.DisplayNameFor(model => model.Nacin)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Način)
+            @Html.DisplayFor(model => model.Nacin)
         </dd>
     </dl>
 </div>
