--- a/Online_razmjena/Views/Zamjena/Index.cshtml
+++ b/Online_razmjena/Views/Zamjena/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Online_razmjena.Models.ZamjenaModel>
+﻿@model IEnumerable<Zamjena>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Način)
+                @Html.DisplayNameFor(model => model.Nacin)
             </th>
             <th></th>
         </tr>
@@ -22,7 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Način)
+                @Html.DisplayFor(modelItem => item.Nacin)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ZamjenaId">Edit</a> |
