--- a/Online_razmjena/Views/Album/Index.cshtml
+++ b/Online_razmjena/Views/Album/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><button type="button" class="btn btn-primary float-lg-right">Novi Album</button></a>
 </p>
 <table class="table">
     <thead>
