--- a/Online_razmjena/Views/Role/Index.cshtml
+++ b/Online_razmjena/Views/Role/Index.cshtml
@@ -7,10 +7,18 @@
 <p>
     @using (Html.BeginForm("Index", "Role", FormMethod.Get))
     {
-        @Html.TextBox("search")<input style="margin-left:4px;" type="submit" value="Pretraži" />
+        <div class="input-group">
+            @Html.TextBox("search")
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">Search</button>
+            </div>
+        </div>
+
     }
 </p>
-<a asp-action="Create" class="btn btn-sm btn-primary">Nova</a>
+<a asp-action="Create" class="btn btn-sm btn-primary">Nova Uloga</a>
+<a asp-area="" asp-controller="Album" asp-action="Index" class="btn btn-sm btn-primary">Albumi</a>
+<a asp-area="" asp-controller="Zamjena" asp-action="Index" class="btn btn-sm btn-primary">Zamjene</a>
 
 <table class="table table-striped table-bordered">
     <thead>
