--- a/Online_razmjena/Views/Poruka/Index.cshtml
+++ b/Online_razmjena/Views/Poruka/Index.cshtml
@@ -7,8 +7,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create"><button type="button" class="btn btn-primary float-lg-left">Nova Poruka</button></a>&nbsp;&nbsp;
-    <a asp-action="Poslano"><button type="button" class="btn btn-primary">Poslano</button></a>
+    <a asp-action="Create" class="btn btn-primary">Nova Poruka</a>&nbsp;&nbsp;
+    <a asp-action="Poslano" class="btn btn-primary">Poslano</a>
 </p>
 <table class="table">
     <thead>
@@ -39,8 +39,8 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                <a asp-action="Details" asp-route-id="@item.Id"><button type="button" class="btn btn-primary float-lg-left">Pročitaj poruku</button></a> &nbsp;|&nbsp;
-                <a asp-action="Delete" asp-route-id="@item.Id"><button type="button" class="btn btn-danger">Izbriši</button></a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary float-lg-left">Pročitaj poruku</a> &nbsp;|&nbsp;
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Izbriši</a>
             </td>
         </tr>
     
