--- a/Online_razmjena/Views/Slicice/MySlicice.cshtml
+++ b/Online_razmjena/Views/Slicice/MySlicice.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Moje Sličice";
 }
 @model IEnumerable<SliciceModel>
+<p>
+    @using (Html.BeginForm("Index", "Slicice", FormMethod.Get))
+    {
 
+        <div class="input-group">
+            @Html.TextBox("search")
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">Search</button>
+            </div>
+        </div>
+
+    }
+</p>
 <div class="container">
     <h3 class="display-4">Sličice</h3>
     <div class="row">
