--- a/Online_razmjena/Views/Zamjena/Index.cshtml
+++ b/Online_razmjena/Views/Zamjena/Index.cshtml
@@ -4,10 +4,22 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<h1>Zamjene</h1>
 <p>
-    <a asp-action="Create"><button type="button" class="btn btn-primary float-lg-right">Novi način zamjene</button></a>
+    @using (Html.BeginForm("Index", "Zamjena", FormMethod.Get))
+    {
+
+        <div class="input-group">
+            @Html.TextBox("search")
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">Search</button>
+            </div>
+        </div>
+
+    }
+</p>
+<p>
+    <a asp-action="Create" class="btn btn-primary">Novi način zamjene</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Nacin)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ZamjenaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ZamjenaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ZamjenaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ZamjenaId" class="btn btn-info">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ZamjenaId" class="btn btn-primary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ZamjenaId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
