--- a/Online_razmjena/Views/Shared/_sliciceThumbnailDelete.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnailDelete.cshtml
@@ -10,6 +10,9 @@
                 <a asp-route="Details" asp-route-id="@Model.Id"
                    class="btn btn-sm btn-outline-secondary">Detalji</a>
             </div>
+            <div class="btn-group">
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-info">Izmjeni</a>
+            </div>
             <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
                 <button type="submit" class="btn btn-sm btn-danger">
                     Izbriši
