--- a/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SliciceModel
 
 <div class="card mb-4 shadow-sm">
-    <img src="@(string.IsNullOrEmpty(Model.CoverImageUrl) ? "/images/noimage.png" : Model.CoverImageUrl)" class="img-thumbnail" />
+    <img src="@(string.IsNullOrEmpty(Model.CoverImageUrl) ? "/images/noimage.png" : Model.CoverImageUrl)"  width="338" height="200" />
     <div class="card-body">
         <h3 class="card-title">@(string.IsNullOrEmpty(Model.Naziv) ? "Naziv nije dostupan" : Model.Naziv)</h3>
         <p class="card-text">@(string.IsNullOrEmpty(Model.Opis) ? "Nema Opisa": Model.Opis)</p>
