--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -20,7 +20,7 @@
                     @for (int i = 0; i < Model.Gallery.Count(); i++)
                     {
                         <div class="@(i==0 ? "carousel-item active" : "carousel-item") ">
-                            <img class="d-block w-100" src="@Model.Gallery[i].URL" alt="@Model.Gallery[i].Naziv">
+                            <img class="d-block w-100" src="@Model.Gallery[i].URL" alt="@Model.Gallery[i].Naziv" width="525" height="295">
                         </div>
                     }
 
