--- a/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnail.cshtml
@@ -4,21 +4,22 @@
     <img src="@(string.IsNullOrEmpty(Model.CoverImageUrl) ? "/images/noimage.png" : Model.CoverImageUrl)"  width="338" height="200" />
     <div class="card-body">
         <h3 class="card-title">@(string.IsNullOrEmpty(Model.Naziv) ? "Naziv nije dostupan" : Model.Naziv)</h3>
+        <h6 class="card-title">@(string.IsNullOrEmpty(Model.Album) ? "Naziv nije dostupan" : Model.Album)</h6>
         <p class="card-text">@(string.IsNullOrEmpty(Model.Opis) ? "Nema Opisa": Model.Opis)</p>
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
                 <a asp-route="Details" asp-route-id="@Model.Id"
                    class="btn btn-sm btn-outline-secondary">Detalji</a>
             </div>
-                @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdmin")).Succeeded)
-                {
-                    <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
-                        <button type="submit" class="btn btn-sm btn-danger">
-                            Izbriši
-                        </button>
-                    </form>
-                }
-                <small class="text-muted">@(string.IsNullOrEmpty(Model.Kontakt) ? "NA" : Model.Kontakt)</small>
-            </div>
+            @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdmin")).Succeeded)
+            {
+                <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+                    <button type="submit" class="btn btn-sm btn-danger">
+                        Izbriši
+                    </button>
+                </form>
+            }
+            <small class="text-muted">@(string.IsNullOrEmpty(Model.Kontakt) ? "NA" : Model.Kontakt)</small>
         </div>
+    </div>
 </div>
