--- a/Online_razmjena/Views/Zamjena/Index.cshtml
+++ b/Online_razmjena/Views/Zamjena/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Nacin)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ZamjenaId" class="btn btn-info">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ZamjenaId" class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ZamjenaId" class="btn btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ZamjenaId" class="btn btn-info">Izmjeni</a> |
+                <a asp-action="Details" asp-route-id="@item.ZamjenaId" class="btn btn-primary">Detalji</a> |
+                <a asp-action="Delete" asp-route-id="@item.ZamjenaId" class="btn btn-danger">Izbriši</a>
             </td>
         </tr>
 }
