--- a/Online_razmjena/Views/Shared/_sliciceThumbnailDelete.cshtml
+++ b/Online_razmjena/Views/Shared/_sliciceThumbnailDelete.cshtml
@@ -3,9 +3,9 @@
 <div class="card mb-4 shadow-sm">
     <img src="@(string.IsNullOrEmpty(Model.CoverImageUrl) ? "/images/noimage.png" : Model.CoverImageUrl)"  width="338" height="200" />
     <div class="card-body">
+        <h6 class="card-title text-danger">@(string.IsNullOrEmpty(Model.Filter) ? "Naziv nije dostupan" : Model.Filter)</h6>
         <h3 class="card-title">@(string.IsNullOrEmpty(Model.Naziv) ? "Naziv nije dostupan" : Model.Naziv)</h3>
         <h6 class="card-title">@(string.IsNullOrEmpty(Model.Album) ? "Naziv nije dostupan" : Model.Album)</h6>
-        <p class="card-text">@(string.IsNullOrEmpty(Model.Opis) ? "Nema Opisa": Model.Opis)</p>
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
                 <a asp-route="Details" asp-route-id="@Model.Id"
