--- a/Online_razmjena/Views/Slicice/Details.cshtml
+++ b/Online_razmjena/Views/Slicice/Details.cshtml
@@ -38,6 +38,11 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
+                    <span class="text-danger">@Model.Filter</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <h1>@Model.Naziv</h1>
                 </div>
             </div>
