--- a/Online_razmjena/Views/Slicice/Index.cshtml
+++ b/Online_razmjena/Views/Slicice/Index.cshtml
@@ -8,6 +8,12 @@
     {
 
     <div class="input-group">
+        <span class="font-weight-bold">Kupnja ili Prodaja: </span>&nbsp;&nbsp;
+        @Html.DropDownList("filter", new List<SelectListItem>
+{
+      new SelectListItem { Text = "Kupnja", Value = "Kupujem", Selected=true},
+      new SelectListItem { Text = "Prodaja", Value = "Prodajem"},
+}, htmlAttributes: new { @class = "form-control" })&nbsp;&nbsp;
         <span class="font-weight-bold">Naziv: </span>&nbsp;&nbsp;
         @Html.TextBox("search")&nbsp;&nbsp;
         <span class="font-weight-bold">Album: </span>&nbsp;&nbsp;
