--- a/Online_razmjena/Views/Album/Index.cshtml
+++ b/Online_razmjena/Views/Album/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Naziv)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.AlbumId" class="btn btn-info">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AlbumId" class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AlbumId" class="btn btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.AlbumId" class="btn btn-info">Promijeni</a> |
+                <a asp-action="Details" asp-route-id="@item.AlbumId" class="btn btn-primary">Detalji</a> |
+                <a asp-action="Delete" asp-route-id="@item.AlbumId" class="btn btn-danger">Izbriši</a>
             </td>
         </tr>
 }
