--- a/Online_razmjena/Views/Album/Create.cshtml
+++ b/Online_razmjena/Views/Album/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Online_razmjena.Models.AlbumModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Napravi";
 }
 
-<h1>Create</h1>
+<h1>Napravi</h1>
 
-<h4>AlbumModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,7 +24,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Natrag</a>
 </div>
 
 @section Scripts {
