--- a/Online_razmjena/Views/Album/Delete.cshtml
+++ b/Online_razmjena/Views/Album/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Album
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Izbriši";
 }
 
-<h1>Delete</h1>
+<h1>Izbriši</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni?</h3>
 <div>
     <h4>AlbumModel</h4>
     <hr />
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AlbumId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Natrag</a>
     </form>
 </div>
