--- a/Online_razmjena/Views/Album/Details.cshtml
+++ b/Online_razmjena/Views/Album/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Album
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalji";
 }
 
-<h1>Details</h1>
+<h1>Detalji</h1>
 
 <div>
-    <h4>AlbumModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
