--- a/Online_razmjena/Views/Zamjena/Details.cshtml
+++ b/Online_razmjena/Views/Zamjena/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Zamjena
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalji";
 }
 
-<h1>Details</h1>
+<h1>Detalji</h1>
 
 <div>
-    <h4>ZamjenaModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,5 +19,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ZamjenaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Natrag</a>
 </div>
