--- a/Online_razmjena/Views/Zamjena/Edit.cshtml
+++ b/Online_razmjena/Views/Zamjena/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Zamjena
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Izmjeni";
 }
 
-<h1>Edit</h1>
+<h1>Izmjeni</h1>
 
-<h4>ZamjenaModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Natrag</a>
 </div>
 
 @section Scripts {
