--- a/Online_razmjena/Views/Role/EditUsersInRole.cshtml
+++ b/Online_razmjena/Views/Role/EditUsersInRole.cshtml
@@ -37,7 +37,7 @@
             <input type="submit" value="Update" class="btn btn-primary"
                    style="width:auto" />
             <a asp-action="Update" asp-route-id="@roleId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
+               class="btn btn-primary" style="width:auto">Izađi</a>
         </div>
     </div>
 </form>
