--- a/Online_razmjena/Views/Poruka/Index.cshtml
+++ b/Online_razmjena/Views/Poruka/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Inbox</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Nova Poruka</a>&nbsp;&nbsp;
