--- a/Online_razmjena/Views/Role/Create.cshtml
+++ b/Online_razmjena/Views/Role/Create.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-<h1>Create Role</h1>
+<h1>Napravi novu ulogu</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Natrag</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");
