--- a/Online_razmjena/Views/Role/Update.cshtml
+++ b/Online_razmjena/Views/Role/Update.cshtml
@@ -20,7 +20,7 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="card">
         <div class="card-header">
-            <h3>Users in this role</h3>
+            <h3>Korisnici u ovoj ulozi</h3>
         </div>
         <div class="card-body">
             @if (Model.Users.Any())
@@ -32,7 +32,7 @@
             }
             else
             {
-                <h5 class="card-title">None at the moment</h5>
+                <h5 class="card-title">Trenutno nema</h5>
             }
         </div>
         <div class="card-footer">
