Added read unread on inbox

--- a/Online_razmjena/Views/Poruka/Index.cshtml
+++ b/Online_razmjena/Views/Poruka/Index.cshtml
@@ -39,7 +39,15 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary float-lg-left">Pročitaj poruku</a> &nbsp;|&nbsp;
+                @if (item.Procitano == false)
+                {
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info float-lg-left">Pročitaj novu poruku</a> 
+                }
+                else
+                {
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary float-lg-left">Pročitaj poruku</a> 
+                }
+                |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Izbriši</a>
             </td>
         </tr>
