--- a/Online_razmjena/Views/Role/EditUsersInRole.cshtml
+++ b/Online_razmjena/Views/Role/EditUsersInRole.cshtml
@@ -34,7 +34,7 @@
             }
         </div>
         <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
+            <input type="submit" value="Izmjeni" class="btn btn-primary"
                    style="width:auto" />
             <a asp-action="Update" asp-route-id="@roleId"
                class="btn btn-primary" style="width:auto">Izađi</a>
