--- a/Online_razmjena/Views/Poruka/Poslano.cshtml
+++ b/Online_razmjena/Views/Poruka/Poslano.cshtml
@@ -36,7 +36,7 @@
                     </td>
                     <td>
                         @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Pročitaj poruku</a> |
+                        <a asp-action="DetailsOutbox" asp-route-id="@item.Id" class="btn btn-primary">Pročitaj poruku</a> |
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Izbriši</a>
                     </td>
                 </tr>
